--- a/views/index.jade
+++ b/views/index.jade
@@ -3,6 +3,7 @@ html(ng-app='resumeApp')
 	head
 		title= title
 		link(rel='stylesheet', href='/content/stylesheets/style.css')
+		link(rel="stylesheet", href="/lib/bootstrap/dist/css/bootstrap-theme.min.css")
 		script(src="/lib/angular/angular.min.js")
 		script(src="/lib/angular-route/angular-route.min.js")
 		script(src="/content/javascripts/clientAPI.js")
@@ -10,3 +11,4 @@ html(ng-app='resumeApp')
 	body
 		div(ng-view)
 		div(class="footer")
+		base(href="/")
