--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -1,11 +1,27 @@
+<div id="page">
+	<a class="skip-link screen-reader-text"></a>
+	<header id="masthead" class="site-header">
+		<div class="header-wrap">
+            <div class="container">
+                <div class="row">
+				<div class="col-md-4 col-sm-8 col-xs-12">
+				</div>
+				<div class="col-md-8 col-sm-4 col-xs-12">
+					<div class="btn-menu"></div>
+					<nav id="mainnav" class="mainnav" role="navigation">
+						<li ng-repeat="menuItem in menus">
+							<a class="navbar-brand" href="/{{menuItem.location}}">{{menuItem.name}}</a>
+						</li>
+					</nav><!-- #site-navigation -->
+				</div>
+				</div>
+			</div>
+		</div>
+	</header><!-- #masthead -->
 
-<nav class="navbar navbar-default">
-<ul class "nav navbar-nav">
-	<li class="navbar-text" ng-repeat="menuItem in menus">
-		<a class="navbar-brand" href="/{{menuItem.location}}">{{menuItem.name}}</a>
-	</li>
-</ul>
-	<span class ="icon-bar"></span>
-</nav>
+	<div class="header-image" ng-show="showHeader">
+		<img class="header-inner" src="/content/images/1.jpg" />
+	</div>
 
-<h2>{{title}}</h2>
+	<div ng-include src="content/partials/footer.html"></div>
+</div>
