--- a/views/index.jade
+++ b/views/index.jade
@@ -3,14 +3,15 @@ html(ng-app='baseApp')
 	head
 		title= title
 		meta(name="viewport", content="width=device-width, initial-scale=1")
+		link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css")
 		link(rel='stylesheet', href='/content/stylesheets/syndney.css')
-		link(rel="stylesheet", href="/lib/bootstrap/dist/css/bootstrap-theme.min.css")
 		script(src="/lib/angular/angular.min.js")
 		script(src="/lib/angular-route/angular-route.min.js")
+		script(src="/lib/angular-ui-bootstrap/ui-bootstrap.js")
+		link(rel="stylesheet", href="/lib/angular-ui-bootstrap/ui-bootstrap-csp.css")
 		script(src="/content/javascripts/baseApp.js")
 		script(src="/content/javascripts/controllers/experience.js")
 		script(src="/content/javascripts/controllers/aboutMe.js")
-	body
-		div(ng-view)
-		div(class="footer")
+	body(class ="home blog")
+		div(ng-view, id="page", class="hfeed site")
 		base(href="/")
