--- a/public/stylesheets/syndney.css
+++ b/public/stylesheets/syndney.css
@@ -1044,15 +1044,18 @@ Parallax
 		background-position: 50% 0;
 	}
 /*--------------------------------------------------------------
-Hero section
+Slider Section
 --------------------------------------------------------------*/
 	.header-slider {
-		position: relative;
+		position: fixed;
+		top: 25%;
 	    max-width: 100%;
+	    overflow: hidden;
+	    width: 100%; 
+	    height: 419px;
+	    z-index: 10;
 	}
-	.slide-text.slides {
-	   padding-left: 0;
-	}	
+
 	.slides-container .slide-item {
 	    background-attachment: fixed;
 	    background-position: center;
@@ -1061,9 +1064,8 @@ Hero section
 	}
 	.text-slider-section {
 		position: absolute;
-	    top: 50%;
-	    left: 0;
-	    right: 0;
+	    margin: 0;
+	    padding: 0;
 	    text-align: center;
 	    z-index: 2;
 	    width: 100%;
@@ -3046,7 +3048,8 @@ Panels
 			margin: 15px auto 0;
 		}
 		.header-wrap {
-			text-align: center;	
+			text-align: center;
+				
 		}
 		#mainnav-mobi {
 			top: auto;
