--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -10,14 +10,14 @@
 				<div class="col-xs-6 col-md-4">
 					<div class="btn-menu">
 						<ul>
-							<li ng-repeat="menuItem in menus" ng-click="toggleHeader()">
+							<li ng-repeat="menuItem in menus" ng-click="toggleHeader(menuItem.name)">
 								<a class="" href="/{{menuItem.location}}" >{{menuItem.name}}</a>
 							</li>
 						</ul>
 					</div>
 					<nav id="mainnav" class ="mainnav" role="navigation">
 						<ul>
-							<li ng-repeat="menuItem in menus" ng-click="toggleHeader()">
+							<li ng-repeat="menuItem in menus" ng-click="toggleHeader(menuItem.name)">
 								<a class="navbar-brand" >{{menuItem.name}}</a>
 							</li>
 						</ul>
@@ -32,23 +32,22 @@
 	slides-container
 -->
 
-<div class="header-slider">
+<div class="header-slider" ng-show="showHeader">
 	<div class="slides-container text-slider-section">
     	<uib-carousel interval="interval" no-wrap="noWrapSlides">
     		<uib-slide ng-repeat="slide in sliderPhrases" class="text-slider">
     			<div class="slide-item">
     				<h2 class="maintitle">{{slide}}</h2>
-					<h3 class="subtitle">
-						{{startingPoint}}
-					</h3>	
+					<p class="subtitle">
+    					<a class="roll-button button-slider">{{startingPoint}}</a>
+					</p>	
 				</div>
     		</uib-slide>
     	</uib-carousel>
-    	<a class="roll-button button-slider">{{startingPoint}}</a>
 	</div>
 </div>
 
-<div class="header-image" ng-hide="showHeader">
+<div class="header-image" ng-show="showHeader">
 	<img class="header-inner" src="{{headerImage}}" />
 </div>
 
