--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -1,32 +1,4 @@
-<a class="skip-link screen-reader-text">{{title}}</a>
-<header id="masthead" class="site-header float-header" role="banner">
-	<div class="header-wrap">
-        <div class="container-fluid">
-            <div class="row">
-				<div class="col-xs-12 col-sm-6 col-md-8">
-					<h1 class="site-title">{{title}}</h1>
-					<h2 class="site-description">{{description}}</h2>	
-				</div>
-				<div class="col-xs-6 col-md-4">
-					<div class="btn-menu">
-						<ul>
-							<li ng-repeat="menuItem in menus" ng-click="toggleHeader(menuItem.name)">
-								<a class="" href="/{{menuItem.location}}" >{{menuItem.name}}</a>
-							</li>
-						</ul>
-					</div>
-					<nav id="mainnav" class ="mainnav" role="navigation">
-						<ul>
-							<li ng-repeat="menuItem in menus" ng-click="toggleHeader(menuItem.name)">
-								<a class="navbar-brand" >{{menuItem.name}}</a>
-							</li>
-						</ul>
-					</nav><!-- #site-navigation -->
-				</div>
-			</div>
-		</div>
-	</div>
-</header><!-- #masthead -->
+
 <!--
 	remove flex-slider text-slider-section
 	slides-container
@@ -54,12 +26,7 @@
 <div id="content" class="page-wrap">
 	<div class="container content-wrapper">
 		<div class="row">
-
 		</div>
 	</div>
-	<footer id="colophon" class="site-footer" role="contentinfo">
-		<div class="site-info container">
-			<a class="navbar-brand" href="/{{menuItem.location}}">{{menuItem.name}}</a>
-		</div><!-- .site-info -->
-	</footer><!-- #colophon -->
+	<div ng-include="/content/partials/footer.html"></div>
 </div><!-- #content -->
