--- a/public/stylesheets/syndney.css
+++ b/public/stylesheets/syndney.css
@@ -1618,6 +1618,7 @@ Bottom
 		background-color: #1c1c1c;
 		line-height: 35px;
 		padding: 15px 0;
+		z-index: 10;
 	}
 	.site-footer,
 	.site-footer a {
