Moved part of the home.html view to the index.jade probably will do some renaming soon

--- a/public/stylesheets/syndney.css
+++ b/public/stylesheets/syndney.css
@@ -594,7 +594,7 @@ Header
 		max-height: 100px;
 	}
 	.site-header {
-		position: absolute;
+		position: relative;
 		top: 0;
 		left: 0;
 		width: 100%;
@@ -612,7 +612,6 @@ Header
 		top: 32px;
 	}
 	.header-image {
-
 		position: relative;
 		height: 300px;
 		background-position: center;
