--- a/views/header.jade
+++ b/views/header.jade
@@ -10,11 +10,11 @@ div(class="hfeed site", ng-controller="homePage")
 					div(class="col-xs-6 col-md-4")
 						div(class="btn-menu")
 							ul
-								li(ng-repeat="menuItem in menus")
-								a(href="/{{menuItem.location}}") >{{menuItem.name}}
+								li(ng-repeat="menuItem in menus", ng-click="toggerHeader(menuItem.name)")
+								a(href="/{{menuItem.location}}"){{menuItem.name}}
 						nav(id="mainnav", class ="mainnav", role="navigation")
 							ul
-								li(ng-repeat="menuItem in menus")
+								li(ng-repeat="menuItem in menus", ng-click="toggerHeader(menuItem.name)")
 									a(href="/{{menuItem.location}}") {{menuItem.name}}
 	div(class="header-image" ng-show="showHeader")
 		img(class="header-inner", src="{{headerImage}}")
