--- a/views/index.jade
+++ b/views/index.jade
@@ -3,12 +3,20 @@ html(ng-app='baseApp')
 	head
 		title= title
 		meta(name="viewport", content="width=device-width, initial-scale=1")
+
+		//TODO Find out why npm sucks dick
+
 		link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css")
-		script(src="/lib/angular/angular.min.js")
-		script(src="/lib/angular-animate/angular-animate.min.js")
+		script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.js")
+		script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-animate.js")
+		script(src-"https://ajax.googleapis.com/ajax/libs/angular_material/0.11.2/angular-material.min.js")
+		script(src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.14.1.js")
+
+		//script(src="/lib/angular/angular.min.js")
+		//script(src="/lib/angular-animate/angular-animate.min.js")
 		script(src="/lib/angular-route/angular-route.min.js")
-		script(src="/lib/angular-ui-bootstrap/ui-bootstrap.js")
-		link(rel="stylesheet", href="/lib/angular-ui-bootstrap/ui-bootstrap-csp.css")
+		//script(src="/lib/angular-ui-bootstrap/ui-bootstrap.js")
+		//link(rel="stylesheet", href="/lib/angular-ui-bootstrap/ui-bootstrap-csp.css")
 		
 		// The javascript and css 
 		script(src="/content/javascripts/baseApp.js")
@@ -24,4 +32,4 @@ html(ng-app='baseApp')
 			footer(ng-model="menus", class="site-footer", role="contentinfo")
 				div(class="site-info container")
 					a(href="/{{menuItem.location}}") >{{menuItem.name}}
-		base(href="/")
+		base(href="/content")
