Refactoring in progress changed some thin, added json libraries

--- a/public/partials/aboutMe.html
+++ b/public/partials/aboutMe.html
@@ -1,1 +1,10 @@
-<p>{{data}}</p>
+<article>
+	<header class="entry-header">
+		<h2 class="site-title">{{title}}</h2>
+	</header>
+	<div class="entry-content" ng-bind-html-unsafe="{{description}}">
+		<div ng-bind-html-unsafe="description">
+			
+		</div>
+	</div>
+</article>
