--- a/views/header.jade
+++ b/views/header.jade
@@ -6,15 +6,15 @@ div(class="hfeed site", ng-controller="homePage")
 				div(class="row")
 					div(class="col-xs-12 col-sm-6 col-md-8")
 						h1(class="site-title") {{title}}
-						h2(class="site-description") {{description}}
+						p(class="site-description") {{description}}
 					div(class="col-xs-6 col-md-4")
 						div(class="btn-menu")
 							ul
-								li(ng-repeat="menuItem in menus", ng-click="toggerHeader(menuItem.name)")
+								li(ng-repeat="menuItem in menus", ng-click="toggleHeader(menuItem.name)")
 								a(href="/{{menuItem.location}}"){{menuItem.name}}
 						nav(id="mainnav", class ="mainnav", role="navigation")
 							ul
-								li(ng-repeat="menuItem in menus", ng-click="toggerHeader(menuItem.name)")
+								li(ng-repeat="menuItem in menus", ng-click="toggleHeader(menuItem.name)")
 									a(href="/{{menuItem.location}}") {{menuItem.name}}
 	div(class="header-image" ng-show="showHeader")
 		img(class="header-inner", src="{{headerImage}}")
