--- a/views/index.jade
+++ b/views/index.jade
@@ -4,32 +4,37 @@ html(ng-app='baseApp')
 		title= title
 		meta(name="viewport", content="width=device-width, initial-scale=1")
 
-		//TODO Find out why npm sucks dick
-
+		//TODO switch to bower
+		// Figure out why I can't import Angular bootstrap UI
+		script(src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.14.0.js")
 		link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css")
 		script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.js")
+		script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-route.js")
 		script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-animate.js")
 		script(src-"https://ajax.googleapis.com/ajax/libs/angular_material/0.11.2/angular-material.min.js")
 		script(src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.14.1.js")
+		srcipt(src="http://code.angularjs.org/X.Y.Z/angular-sanitize.js")
 
+		//All the npm 
 		//script(src="/lib/angular/angular.min.js")
 		//script(src="/lib/angular-animate/angular-animate.min.js")
-		script(src="/lib/angular-route/angular-route.min.js")
+		//script(src="/lib/angular-route/angular-route.min.js")
 		//script(src="/lib/angular-ui-bootstrap/ui-bootstrap.js")
 		//link(rel="stylesheet", href="/lib/angular-ui-bootstrap/ui-bootstrap-csp.css")
 		
 		// The javascript and css 
 		script(src="/content/javascripts/baseApp.js")
-		script(src="/content/javascripts/controllers/experience.js")
 		script(src="/content/javascripts/controllers/aboutMe.js")
 
 		link(rel='stylesheet', href='/content/stylesheets/syndney.css')
-		// Figure out why I can't import Angular bootstrap UI
-		script(src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.14.0.js")
+
 	body(class ="home blog")
 		include ./header.jade
-			div(ng-view)
-			footer(ng-model="menus", class="site-footer", role="contentinfo")
-				div(class="site-info container")
-					a(href="/{{menuItem.location}}") >{{menuItem.name}}
-		base(href="/content")
+		div(class="fp-content-area")
+			main(class="site-main", role="main")
+				div(class="entry-content")
+					div(ng-view)
+		footer(ng-model="menus", class="site-footer", role="contentinfo")
+			div(class="site-info container")
+				a(href="/{{menuItem.location}}") {{menuItem.name}}
+		base(href="/")
