--- a/views/index.jade
+++ b/views/index.jade
@@ -6,7 +6,6 @@ html(ng-app='baseApp')
 
 		//TODO switch to bower
 		// Figure out why I can't import Angular bootstrap UI
-		script(src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.14.0.js")
 		link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css")
 		script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.js")
 		script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-route.js")
@@ -25,6 +24,7 @@ html(ng-app='baseApp')
 		// The javascript and css 
 		script(src="/content/javascripts/baseApp.js")
 		script(src="/content/javascripts/controllers/aboutMe.js")
+		script(src="/content/javascripts/baseApp.config.js")
 
 		link(rel='stylesheet', href='/content/stylesheets/syndney.css')
 
