--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -1,9 +1,3 @@
-
-<!--
-	remove flex-slider text-slider-section
-	slides-container
--->
-
 <div class="header-slider" ng-show="showHeader">
 	<div class="slides-container text-slider-section">
     	<uib-carousel interval="interval" no-wrap="noWrapSlides">
@@ -11,7 +5,7 @@
     			<div class="slide-item">
     				<h2 class="maintitle">{{slide}}</h2>
 					<p class="subtitle">
-    					<a class="roll-button button-slider">{{startingPoint}}</a>
+    					<a class="roll-button button-slider" ng-model="startingPoint">{{startingPoint}}</a>
 					</p>	
 				</div>
     		</uib-slide>
