--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,6 @@
 doctype html
 html(ng-app='baseApp')
 	head
-		title= title
 		meta(name="viewport", content="width=device-width, initial-scale=1")
 
 		//TODO switch to bower
@@ -12,22 +11,18 @@ html(ng-app='baseApp')
 		script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-animate.js")
 		script(src-"https://ajax.googleapis.com/ajax/libs/angular_material/0.11.2/angular-material.min.js")
 		script(src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.14.1.js")
-		srcipt(src="http://code.angularjs.org/X.Y.Z/angular-sanitize.js")
-
+		script(src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-sanitize.js")
 		//All the npm 
 		//script(src="/lib/angular/angular.min.js")
 		//script(src="/lib/angular-animate/angular-animate.min.js")
 		//script(src="/lib/angular-route/angular-route.min.js")
 		//script(src="/lib/angular-ui-bootstrap/ui-bootstrap.js")
-		//link(rel="stylesheet", href="/lib/angular-ui-bootstrap/ui-bootstrap-csp.css")
-		
+		//link(rel="stylesheet", href="/lib/angular-ui-bootstrap/ui-bootstrap-csp.css")		
 		// The javascript and css 
 		script(src="/content/javascripts/baseApp.js")
 		script(src="/content/javascripts/controllers/aboutMe.js")
 		script(src="/content/javascripts/baseApp.config.js")
-
 		link(rel='stylesheet', href='/content/stylesheets/syndney.css')
-
 	body(class ="home blog")
 		include ./header.jade
 		div(class="fp-content-area")
