--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -1,4 +1,4 @@
-<div class="header-slider" ng-show="showHeader">
+<div class="header-slider">
 	<div class="slides-container text-slider-section">
     	<uib-carousel interval="interval" no-wrap="noWrapSlides">
     		<uib-slide ng-repeat="slide in sliderPhrases" class="text-slider">
