--- a/views/index.jade
+++ b/views/index.jade
@@ -23,13 +23,13 @@ html(ng-app='baseApp')
 		script(src="/content/javascripts/controllers/aboutMe.js")
 		script(src="/content/javascripts/baseApp.config.js")
 		link(rel='stylesheet', href='/content/stylesheets/syndney.css')
-	body(class ="home blog")
+	body(class ="home blog", ng-controller="homePageController")
 		include ./header.jade
 		div(class="fp-content-area")
 			main(class="site-main", role="main")
-				div(class="entry-content")
-					div(ng-view)
-		footer(ng-model="menus", class="site-footer", role="contentinfo")
-			div(class="site-info container")
-				a(href="/{{menuItem.location}}") {{menuItem.name}}
+				div(class="entry-content row", ng-view)
+		footer(ng-model="menus", class="site-footer mainnav", role="contentinfo")
+			ul(class="socials")
+				li(ng-repeat="menuItem in menus", ng-click="toggleHeader(menuItem.name)")
+					a(href="/{{menuItem.location}}") {{menuItem.name}}
 		base(href="/")
