Re factored establishing project structure

--- a/views/index.jade
+++ b/views/index.jade
@@ -19,6 +19,7 @@ html(ng-app='baseApp')
 		//script(src="/lib/angular-ui-bootstrap/ui-bootstrap.js")
 		//link(rel="stylesheet", href="/lib/angular-ui-bootstrap/ui-bootstrap-csp.css")		
 		// The javascript and css 
+		script(src="/content/javascripts/common/factory/resumeFactory.js")
 		script(src="/content/javascripts/homeApp/baseApp.js")
 		script(src="/content/javascripts/homeApp/controllers/controllers.js")
 		script(src="/content/javascripts/homeApp/baseApp.config.js")
