--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -19,8 +19,8 @@ html(ng-app='baseApp')
 		//script(src="/lib/angular-ui-bootstrap/ui-bootstrap.js")
 		//link(rel="stylesheet", href="/lib/angular-ui-bootstrap/ui-bootstrap-csp.css")		
 		// The javascript and css 
-		script(src="/content/js/homeApp/baseApp.js")
-		link(rel='stylesheet', href='/content/stylesheets/syndney.css')
+		script(src="/content/js/main.js")
+		link(rel='stylesheet', href='/content/css/syndney.css')
 	body(class ="home blog", ng-controller="homePageController")
 		include ./header.jade
 		div(class="fp-content-area")
