--- a/views/index.jade
+++ b/views/index.jade
@@ -5,6 +5,7 @@ html(ng-app='baseApp')
 
 		//TODO switch to bower
 		// Figure out why I can't import Angular bootstrap UI
+		title Tim HomePage
 		link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css")
 		script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.js")
 		script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-route.js")
@@ -12,13 +13,13 @@ html(ng-app='baseApp')
 		script(src-"https://ajax.googleapis.com/ajax/libs/angular_material/0.11.2/angular-material.min.js")
 		script(src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.14.1.js")
 		script(src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-sanitize.js")
-		//All the npm 
+		//All the npm
 		//script(src="/lib/angular/angular.min.js")
 		//script(src="/lib/angular-animate/angular-animate.min.js")
 		//script(src="/lib/angular-route/angular-route.min.js")
 		//script(src="/lib/angular-ui-bootstrap/ui-bootstrap.js")
-		//link(rel="stylesheet", href="/lib/angular-ui-bootstrap/ui-bootstrap-csp.css")		
-		// The javascript and css 
+		//link(rel="stylesheet", href="/lib/angular-ui-bootstrap/ui-bootstrap-csp.css")
+		// The javascript and css
 		script(src="/content/javascripts/common/factory/resumeFactory.js")
 		script(src="/content/javascripts/homeApp/baseApp.js")
 		script(src="/content/javascripts/homeApp/controllers/controllers.js")
